Add LOCAL_DIR_SSL_PORT port redirection to host

--- a/config.env.template
+++ b/config.env.template
@@ -3,6 +3,10 @@ AD_REALM=${AD_DOMAIN}.com
 AD_DC_HOSTNAME=dc1
 CONTAINER_IP4_ADDR=192.168.16.2
 
+# In the container the AD port is 636 but we use Docker port redirection to
+# redirect the container port to a host port.
+LOCAL_DIR_SSL_PORT=7636
+
 # The location on the host to store the Samba server files
 # This is the /var/lib/samba volume within the container.
 HOST_SAMBA_DIRECTORY=/tmp/samba
