set LOCAL_DIR_SSL_PORT=636 and add getShell.sh

--- a/config.env.template
+++ b/config.env.template
@@ -4,8 +4,9 @@ AD_DC_HOSTNAME=dc1
 CONTAINER_IP4_ADDR=192.168.16.2
 
 # In the container the AD port is 636 but we use Docker port redirection to
-# redirect the container port to a host port.
-LOCAL_DIR_SSL_PORT=7636
+# redirect the container port to a host port.  Because of how AD referrals
+# work, this should really remain port 636 on the local side.
+LOCAL_DIR_SSL_PORT=636
 
 # The location on the host to store the Samba server files
 # This is the /var/lib/samba volume within the container.
