We need LOCAL_DIR_PORT too because of AD referrals.

--- a/config.env.template
+++ b/config.env.template
@@ -3,10 +3,13 @@ AD_REALM=${AD_DOMAIN}.com
 AD_DC_HOSTNAME=dc1
 CONTAINER_IP4_ADDR=192.168.16.2
 
-# In the container the AD port is 636 but we use Docker port redirection to
-# redirect the container port to a host port.  Because of how AD referrals
-# work, this should really remain port 636 on the local side.
+# In the container the AD ports are 636 and 389 but we use Docker port
+# redirection to redirect the container ports to host ports.  Because of how
+# AD referrals work, this should really remain ports 636 and 389 on the
+# local side unless you're positive referrals aren't going to come into play
+# for you.
 LOCAL_DIR_SSL_PORT=636
+LOCAL_DIR_PORT=389
 
 # The location on the host to store the Samba server files
 # This is the /var/lib/samba volume within the container.
