--- a/imageFiles/Dockerfile
+++ b/imageFiles/Dockerfile
@@ -26,6 +26,9 @@
 # 
 FROM debian:stretch
 
+ARG APT_PROXY_URL=
+RUN if [ ! -z "$APT_PROXY_URL" ]; then echo "Acquire::http::Proxy \"$APT_PROXY_URL\";" > /etc/apt/apt.conf.d/00aptproxy; else echo "not using apt proxy"; fi
+
 RUN set -x \
   && export DEBIAN_FRONTEND=noninteractive \
   && apt-get update \
