Various changes to upgrade Samba and use the LMDB storage backend.  Current Samba requires the SYS_ADMIN capability in order to provision the domain, so the provision steps now have to be taken during the run phase rather than build phase for the image.  buildImage.sh has been modified to do the domain provisioning.

--- a/config.env.template
+++ b/config.env.template
@@ -20,3 +20,15 @@ HOST_SAMBA_DIRECTORY=/tmp/samba
 
 # Only used in dumpAD.sh script
 AD_BASE="dc=${AD_DOMAIN},dc=com"
+
+# When using the LMDB storage backend, this is the maximum size of the AD
+# backend storage database.
+BACKEND_STORE_SIZE=4Gb
+
+# Uncomment if you do not want to set the domain Administrator while
+# building the image with buildImage.sh.  If you skip this, you should set
+# the password manually the first time you run the container so you're not
+# running with the publicly known default password.
+# Do this with:
+# samba-tool user setpassword Administrator
+#SKIP_ADMIN_PASSWORD_CHANGE=1
