Add support for optionally using podman/buildah instead of docker.

--- a/config.env.template
+++ b/config.env.template
@@ -1,4 +1,4 @@
-# user-defined docker bridged network name
+# user-defined container bridged network name
 NETWORK=bidms_nw
 
 AD_DOMAIN=example
@@ -18,7 +18,6 @@ LOCAL_DIR_PORT=389
 # This is the /var/lib/samba volume within the container.
 HOST_SAMBA_DIRECTORY=/tmp/samba
 
-# Only used in dumpAD.sh script
 AD_BASE="dc=${AD_DOMAIN},dc=com"
 
 # When using the LMDB storage backend, this is the maximum size of the AD
@@ -32,3 +31,7 @@ BACKEND_STORE_SIZE=4Gb
 # Do this with:
 # samba-tool user setpassword Administrator
 #SKIP_ADMIN_PASSWORD_CHANGE=1
+
+# Uncomment if you want to use buildah/podman instead of docker
+#BUILDTIME_CMD=buildah
+#RUNTIME_CMD=podman
