upgrade to bookworm and running as a privileged container seems to now be required with this upgrade

--- a/config.env.template
+++ b/config.env.template
@@ -35,3 +35,6 @@ BACKEND_STORE_SIZE=4Gb
 # Uncomment if you want to use buildah/podman instead of docker
 #BUILDTIME_CMD=buildah
 #RUNTIME_CMD=podman
+
+# Samba almost certainly will not run properly without running as a privileged container
+USE_SUDO=1
