--- a/imageFiles/Dockerfile
+++ b/imageFiles/Dockerfile
@@ -24,7 +24,7 @@
 # NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 # 
-FROM bidms/debian_base:bullseye
+FROM bidms/debian_base:bookworm
 
 ARG APT_PROXY_URL=
 RUN if [ ! -z "$APT_PROXY_URL" ]; then echo "Acquire::http::Proxy \"$APT_PROXY_URL\";" > /etc/apt/apt.conf.d/00aptproxy; else echo "not using apt proxy"; fi
@@ -34,7 +34,8 @@ RUN set -x \
   && apt-get update \
   && apt-get dist-upgrade -y \
   && apt-get install -y bind9-host dnsutils telnet krb5-user \
-       samba winbind ldb-tools tdb-tools \
+       samba samba-ad-dc samba-ad-provision samba-dsdb-modules \
+       winbind ldb-tools tdb-tools \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/*
 
