possible to have a separate host volume for sam.ldb.d

--- a/config.env.template
+++ b/config.env.template
@@ -18,6 +18,12 @@ LOCAL_DIR_PORT=389
 # This is the /var/lib/samba volume within the container.
 HOST_SAMBA_DIRECTORY=/tmp/samba
 
+# The location on the host to store the Samba sam.ldb.d database files. 
+# Within the container, this is /var/lib/samba/private/sam.ldb.d.
+# If this is not set or equals ${HOST_SAMBA_DIRECTORY}/private/sam.ldb.d,
+# then this will not be mounted as a separate volume by runContainer.sh.
+#HOST_SAMBA_LDB_DIRECTORY=${HOST_SAMBA_DIRECTORY}/private/sam.ldb.d
+
 AD_BASE="dc=${AD_DOMAIN},dc=com"
 
 # When using the LMDB storage backend, this is the maximum size of the AD
